test_suite/tests/errors/duplicate_rule_name.stderr
error: Duplicate rule name `step` in state `foo`. Rename one of the rules
 --> tests/errors/duplicate_rule_name.rs:7:13
  |
7 |             step? { return; }
  |             ^^^^
